# TinyMPC-AL

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.c  qpal.c  qpal.h  qpal_main.c  test.txt
c/: .gitignore  CMakeLists.txt  README.md
c/examples/: CMakeLists.txt  CPM.cmake  acrobot.h  bicycle.h  bicycle2_example.c  bicycle_3d.c  bicycle_3d.h  bicycle_3d_example.c  bicycle_5d.h  bicycle_5d_example.c  bicycle_example.c  bicycle_tvlqr.c  bicycle_tvlqr2.c  getting_started.c  json_example.c  main_lqr.c  main_lqr_track.c  main_tvlqr.c  planar_quad_lqr.c  planar_quad_mpc_example.c  quadrotor.c  quadrotor.h  quadrotor_example.c  quadrotor_track_example.c  riccati.c  riccati.h  slap_example.c  util.h
c/examples/arduino_slap/: README.md  arduino_slap.ino
c/examples/benchmarks/: osqp_bicycle_5d.c
c/examples/data/: B_data.txt  back_pass_data.h  bicycle3d_track.h  forward_pass_data.h  lqr_lti_track_data.h  lqr_ltv_data.h  quadrotor_fig8.h  un_data.txt
c/examples/json/: json_example.c
c/examples/riccati/: A_data.txt  CMakeLists.txt  acrobot.h  bicycle.h  bicycle_tvlqr.c  bicycle_tvlqr2.c  main_lqr.c  main_lqr_track.c  main_tvlqr.c  planar_quad_lqr.c  quadrotor.h  riccati.c  riccati.h  riccati_main copy.c  riccati_main.c  test_cholesky.c  test_jacobians.c  util.c  util.h
c/lib/: CMakeLists.txt
c/lib/cjson/: CMakeLists.txt
c/lib/slap/: binary_ops.c  cholesky.h  copy_matrix.h  linalg.h  matmul.h  matrix.c  matrix_checks.h  new_matrix.c  new_matrix.h  printing.h  strided_matrix.h
c/slap/: CMakeLists.txt  binary_ops.c  binary_ops.h  cholesky.c  cholesky.h  copy_matrix.c  copy_matrix.h  errors.c  errors.h  function_mapping.c  function_mapping.h  iterator.c  iterator.h  linalg.h  matmul.c  matmul.h  matrix.c  matrix.h  matrix_checks.c  matrix_checks.h  new_matrix.c  new_matrix.h  qr.c  qr.h  slap.h  strided_matrix.c  strided_matrix.h  unary_ops.c  unary_ops.h  vector_ops.c  vector_ops.h  vector_products.c  vector_products.h
c/src/: CMakeLists.txt  augmented_lagrangian_lqr.c  augmented_lagrangian_lqr.h  bicycle.c  bicycle.h  bicycle_5d.c  bicycle_5d.h  constrained_ilqr.c  constrained_ilqr.h  constrained_lqr.c  constrained_lqr.h  planar_quadrotor.c  planar_quadrotor.h  riccati.h  tiny_constraint.c  tiny_cost.c  tiny_cost.h  tiny_dynamics.c  tiny_dynamics.h  tiny_dynamics_lti.c  tiny_dynamics_lti.h  tiny_dynamics_ltv.c  tiny_dynamics_ltv.h  tiny_lqr_lti.c  tiny_lqr_lti.h  tiny_lqr_ltv.c  tiny_lqr_ltv.h  tiny_mpc_lti.c  tiny_mpc_lti.h  tiny_mpc_ltv.c  tiny_mpc_ltv.h  tiny_struct.c  tiny_struct.h  tiny_utils.c  tinympc.h  unconstrained_lqr.c  unconstrained_lqr.h
c/src/tinympc/: CMakeLists.txt  constrained_ilqr.c  constrained_ilqr.h  constraint_linear.c  constraint_linear.h  cost_lqr.c  cost_lqr.h  data_struct.c  data_struct.h  lqr_lti.c  lqr_ltv.c  mpc_lti.c  mpc_lti.h  mpc_ltv.c  mpc_ltv_sqrt_bkwd_pass.c  mpc_ltv_sqrt_bkwd_pass.h  nmpc.c  nmpc.h  tiny_constraint.c  tiny_constraint.h  tiny_cost.c  tiny_cost.h  tiny_dynamics_lti.c  tiny_dynamics_lti.h  tiny_dynamics_ltv.c  tiny_lqr_lti.c  tiny_lqr_ltv.c  tiny_lqr_ltv.h  tiny_mpc_lti.c  tiny_mpc_ltv.c  tiny_mpc_ltv.h  tiny_struct.c  tiny_utils.c  tiny_utils.h  tinympc.h  utils.c  utils.h
c/test/: CMakeLists.txt  al_lqr_lti_test.c  al_lqr_ltv_test.c  back_pass_test.c  cost_test.c  forward_pass_test.c  lqr_ineq_utils_test copy.c  lqr_ineq_utils_test.c  lqr_lti_test.c  lqr_lti_track_test.c  lqr_test.c  lqrdata_test.c  riccati_test.c  test_utils.c  test_utils.h
c/test/al_ilqr_test/: al_lqr_lti_test.c  back_pass_test.c  cost_test.c  forward_pass_test.c  lqr_lti_test.c  lqr_lti_track_test.c  lqrdata_test.c
c/test/al_lqr_test/: CMakeLists.txt  al_lqr_lti_test.c  al_lqr_ltv_test.c  back_pass_test.c  cost_test.c  forward_pass_test.c  lqr_ineq_utils_test.c  lqr_lti_test.c  lqr_lti_track_test.c  lqr_ltv_test.c  lqr_ltv_track_test.c  lqrdata_test.c  planar_quadrotor.c  test_all.sh
c/test/data/: forward_pass_data.h  lqr_data.h  lqr_lti_track_data.h
c/test/simpletest/: simpletest.c  simpletest.h
c/tests/al_ilqr_test/: al_lqr_lti_test.c  back_pass_test.c  forward_pass_test.c  lqr_ineq_utils_test.c  lqr_lti_test.c  lqr_lti_track_test.c  lqrdata_test.c  test_utils.h
c/tests/simpletest/: CMakeLists.txt  simpletest.h
c/tests/src/: CMakeLists.txt  al_lqr_lti_test.c  (+14 more)
examples/: CMakeLists.txt  bicycle_3d.h  bicycle_3d_example.c  bicycle_5d.c  bicycle_5d_example.c  bicycle_example.c  planar_quad_mpc_example.c  quadrotor.c  quadrotor.h  quadrotor_example.c  quadrotor_track_example.c
examples/data/: bicycle3d_track.h  lqr_ltv_data.h  quadrotor_fig8.h
examples/riccati/: util.c
src/: CMakeLists.txt  linalg.c  linalg.h  macros.h  matrix.c  matrix.h  slap.h  submatrix.c  submatrix.h
src/tinympc/: CMakeLists.txt  al_lqr.c  al_lqr.h  auxil.c  auxil.h  constants.h  constraint_linear.c  constraint_linear.h  cost_lqr.c  cost_lqr.h  data_struct.c  data_struct.h  dynamics_lti.c  dynamics_lti.h  dynamics_ltv.c  dynamics_ltv.h  errors.h  lqr.c  lqr.h  lqr_lti.c  lqr_lti.h  lqr_ltv.c  lqr_ltv.h  model.c  model.h  model_lti.c  model_lti.h  model_ltv.c  model_ltv.h  mpc_lti.c  mpc_lti.h  mpc_ltv.c  mpc_ltv.h  nmpc.h  problem_data.h  tinympc.h  types.h  utils.c  utils.h
test/: CMakeLists.txt  al_lqr_lti_test.c  al_lqr_lti_test.cpp  al_lqr_ltv_test.c  al_lqr_ltv_test.cpp  back_pass_test.cpp  cost_test.c  cost_test.cpp  forward_pass_test.c  forward_pass_test.cpp  lqr_ineq_utils_test.cpp  lqr_lti_test.c  lqr_lti_test.cpp  lqr_lti_track_test.c  lqr_ltv_test.c  lqr_ltv_test.cpp  lqr_ltv_track_test.cpp  lqrdata_test.cpp  model_lti_test.cpp  test_utils.c  test_utils.h
test/data/: back_pass_data.h
test/models/: bicycle_5d.c  bicycle_5d.h  planar_quadrotor.h
tests/src/: CMakeLists.txt  al_lqr_lti_test.c  al_lqr_ltv_test.c  back_pass_test.c  bicycle_5d.h  cost_test.c  forward_pass_test.c  linear_cstr_test.c  lqr_ineq_utils_test.c  lqr_lti_test.c  lqr_lti_track_test.c  lqr_ltv_test.c  lqr_ltv_track_test.c  lqrdata_test.c  model_lti_test.c  model_ltv_test.c  model_test.c  planar_quadrotor.h  setup_prob_test.c  test_utils.c  test_utils.h
(+241 files in other folders)
